# refract

./: .gitmodules  Cargo.toml  flake.nix
.gitea/workflows/: clippy.yaml
logseq/journals/: 2024_12_24.md
logseq/logseq/.recycle/: pages_360° Turn Distance in cm.md  pages_Game Sensitivity Conversion.md  pages_Matching In-game Sensitivity between games.md  pages_Sensitivity Conversion%3A Aimlabs to Roblox.md  pages_Sensitivity Matcher Linux.md
logseq/logseq/bak/pages/Sensitivity Conversion Between Games/: 2024-12-24T15_53_48.113Z.Desktop.md
logseq/pages/: Aspect Ratio Sensitivity Adjuster(ARSA).md  Aspect Ratio Sensitivity Adjustment (ARSA).md  Base Sensitivity Factor (BSF).md  FOV-Resolution Sensitivity Normalizer (FRSN).md  Normalized Base Sensitivity Factor (NBSF).md  Sensitivity Conversion Between Games.md  Sensitivity Conversion%3A Aimlabs to Helldivers 2.md  Sensitivity Conversion%3A Aimlabs to Roblox.md  Sensitivity Conversion%3A Helldivers 2 and Black Desert Online.md  Sensitivity Matcher Linux.md  Standard Sensitivity Factor (SSF).md  new.md  undefined.md
src/: backend_memory.rs  lib.rs  main.rs  mouse.rs  test.rs  tracing.rs
src/gui/: eframe_app.rs  mod.rs
src/gui/components/: main_panel.rs  mod.rs  pixel_360_measurement.rs  sens_conversion.rs  yaw_increment_calculator.rs
src/gui/widgets/: d360_measurement_demo.rs  keybind_action_label.rs  main_header.rs  main_panel.rs  mod.rs  numeric_input.rs  numeric_setting_box.rs  sensitivity_conversion.rs  sensitivity_conversion_demo.rs  status_label.rs  yaw_sweep.rs
src/input/: combo.rs  devices.rs  keybind_receivers.rs  keyboard_tracker.rs  mod.rs  mouse_tracker.rs  relative_mouse_movement.rs  shared_memory.rs  sweep.rs
src/input/shared_memory/: mod.rs  reader.rs  sync.rs  writer.rs
src/input_backend/: combo.rs  mod.rs  relative_mouse_movement.rs  shared_memory.rs
src/sweep/: mod.rs
src/ui/: mod.rs
src/ui/components/: game_settings.rs  main_panel.rs  mod.rs  yaw_increment_calculator.rs
src/ui/widgets/: mod.rs  numeric_input.rs  numeric_setting_box.rs
systemd/: refract-backend.service  refract-frontend.service  refract.target
