[package]
name = "refract-sc"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "refract-frontend"
path = "src/bin/frontend.rs"

[[bin]]
name = "refract-backend"
path = "src/bin/backend.rs"

[dependencies]
# Tokio
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"

# Tracing & Errors
tracing-subscriber = { version = "0.3.19", default-features = false, features = [ "std", "fmt", "ansi", "env-filter" ] }
tracing = { version = "0.1.41", default-features = false, features = [ "std", "attributes" ] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.12"

# Egui
egui = { version = "0.30.0", default-features = false, features = [ "default_fonts" ] }
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }
eframe = { version = "0.30.0", default-features = false, features = [ "wayland", "glow" ] }
scarlet-egui = { git = "https://github.com/scarlet-rip/scarlet-egui.git", rev = "c20626580fc87ee43662663fd4893efd9c71d52c", default-features = false, features = [ "frame", "input_field", "widget_state" ]}

# Input
enigo = { version = "0.3.0", default-features = false, features = [ "xdo", "wayland" ] }
evdev = { version = "0.12.2", default-features = false }

# Shared Memory
mmap-sync = "2.0.1"
rkyv = { version = "0.7.40", features = ["validation", "strict"] }
bytecheck = { version = "~0.6.8", default-features = false }
file-owner = "0.1.2"
sem_safe = { version = "0.2.1", default-features = false, features = [ "named" ] }

# Misc
bon = { version = "3.3.0", default-features = false, features = [ "std" ] }
once_cell = "1.21.3"
